# win32cpp

./: .appveyor.yml  .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  appveyor.yml  azure-pipelines.yml  build.ps1  msvc.cmake
docs/: OVERVIEW.md
src/: CMakeLists.txt  targetver.h
src/lib/: CMakeLists.txt  debug.cpp  debug.h  debug.hpp  dynamic_library.h  error.cpp  error.h  error.hpp  file_mapping.hpp  handle.h  handle.hpp  heap_ptr.hpp  lock_guard.h  lock_guard.hpp  map_view_deleter.h  map_view_deleter.hpp  memory.h  module_info.cpp  module_info.h  module_info.hpp  nt_error.cpp  nt_error.h  pch.h  performance.cpp  performance.h  performance.hpp  privilege_guard.cpp  privilege_guard.h  privilege_guard.hpp  ptr_deleter.h  ptr_deleter.hpp  ptr_setter.h  service.cpp  service.h  service.hpp  stdafx.h  string_extensions.cpp  string_extensions.h  string_extensions.hpp  win32api_abstractions.cpp  (+6 more)
src/lib/ioc/: error.h  file_mapping.cpp  file_mapping.h  handle.h  mutex.cpp  mutex.h  semaphore.cpp  semaphore.h
src/testapp/: CMakeLists.txt  main.cpp
src/testsvc/: CMakeLists.txt
submodules/: CMakeLists.txt
test/: CMakeLists.txt
test/lib/: CMakeLists.txt  debug_tests.cpp  dynamic_library_tests.cpp  error_tests.cpp  handle_tests.cpp  lock_guard_tests.cpp  memory_tests.cpp  module_info_tests.cpp  nt_error_tests.cpp  pch.h  performance_tests.cpp  privilege_guard_tests.cpp  proving_ground.cpp  string_extensions_tests.cpp  win32api_mocks.h
test/testapp/: CMakeLists.txt  main.cpp
test/testsvc/: CMakeLists.txt  main.cpp  pch.h
