add_definitions(-D_SILENCE_TR1_NAMESPACE_DEPRECATION_WARNING)
add_subdirectory(googletest)

#set_target_properties(gtest PROPERTIES FOLDER externals)
#set_target_properties(gtest_main PROPERTIES FOLDER externals)
#set_target_properties(gmock PROPERTIES FOLDER externals)
#set_target_properties(gmock_main PROPERTIES FOLDER externals)
