file(GLOB header_list *.h)
file(GLOB source_list *.cpp)

add_definitions("/analyze")
add_executable(testsvc ${source_list})
include_directories(${CMAKE_SOURCE_DIR}/src/lib)
target_link_libraries(testsvc win32cpp)
if (MSVC_TOOLSET_VERSION GREATER_EQUAL 142)
	target_compile_features(testsvc PRIVATE cxx_std_20)
elseif (MSVC_TOOLSET_VERSION GREATER_EQUAL 141)
	target_compile_features(testsvc PRIVATE cxx_std_17)
else()
	target_compile_features(testsvc PRIVATE cxx_std_14)
endif()
set_target_properties(testsvc PROPERTIES FOLDER test)
